# budgetron

./: .env  .env.travis  .eslintrc.json  .eslintrc.yaml  .flowconfig  .gitignore  .mergify.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.txt  Procfile  README.md  budgetronrc.example.toml  budgetronrc.example.yaml  budgetronrc.toml  budgetronrc.yaml  budgets.yaml  budguess  generate_report  package.json  rustfmt.toml  tsconfig.json  tsfmt.json  webpack.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
budget_server/: Cargo.toml
budget_server/src/: lib.rs
budgetronlib/: Cargo.toml
budgetronlib/src/: config.rs  error.rs  fintime.rs  lib.rs
collator/: Cargo.toml
collator/src/: lib.rs  transfers.rs
data_store/: Cargo.toml
data_store/src/: lib.rs  models.rs
migrations/20160827204143_create_transactions/: up.sql
migrations/20170525020036_add_transfer_destination_account/: down.sql  up.sql
migrations/20170712013213_add_tags_column/: down.sql  up.sql
oldsrc/: categories.rs  common.rs  config.rs  email.html  exports.rs  mailer.rs  main.rs
src/: budget.rs  categories.rs  common.rs  config.rs  email.html  error.rs  exports.rs  fintime.rs  lib.rs  mailer.rs  main.rs
src/loading/: alliant.rs  generic.rs  logix.rs  mint.rs  mod.rs  money.rs  util.rs
src/processing/: config.rs  mod.rs  owner.rs  refunds.rs  regex.rs  tags.rs  transfers.rs
src/reporting/: by_account.rs  by_timeframe.rs  cashflow.rs  categories.rs  config.rs  (+16 more)
static/: index.html
tests/: lib.rs
transactor/: Cargo.toml
web/: .eslintrc.yaml  .flowconfig  package.json  webpack.config.js
(+76 files in other folders)
