[package]
name = "budgetron"
version = "2.0.0-0.0.3"
edition = "2018"
authors = ["Zachary Bush <zach@zmbush.com>"]

[[bin]]
name = "budgetron"
doc = false

[dependencies]
# Both
budgetronlib = { path = "budgetronlib" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"

# Library
csv = "1.1.1"
#data_store = { path = "data_store", optional = true }
log = "0.4.8"
regex = "1.3.1"

# Binary
structopt = "0.3.2"
env_logger = "0.7.0"
iron = "0.6.1"
mount = "0.4.0"
staticfile = "0.5.0"
toml = "0.5.3"

[workspace]

[features]
# default = []

# db = ["data_store"]
